@@ -1,3 +1,8 @@
+2017-01-07  Araki Ken  <arakiken@users.sf.net>
+
+	* libptyssh/vt_pty_ssh.c: bl_trigger_sig_child() is called if vt_pty_ssh_t::is_eof
+	  is true in lo_send_to_pty() instead of lo_write_to_pty().
+
 2017-01-03  Araki Ken  <arakiken@users.sf.net>
 
 	* bl_pty_{bsd|streams}.c: termios.c_cc[VSTATUS] = CSTATUS.
